<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee Application</string>
    <string name="name">Name</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="orderSummary">Order Summary</string>
    <string name="order">Order</string>
    <string name="orderSummary_name">Name : <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="orderSummary_quantity">Quantity : <xliff:g id="quantity" example="1">%s</xliff:g></string>
    <string name="orderSummary_whippedCreamYes">Added Whipped Cream ? Yes</string>
    <string name="orderSummary_whippedCreamNo">Added Whipped Cream ? No</string>
    <string name="orderSummary_chocolateYes">Added Chocolate ? Yes</string>
    <string name="orderSummary_chocolateNo">Added Chocolate ? No</string>
    <string name="orderSummary_price">Price : <xliff:g id="price" example="£12">%s</xliff:g></string>
    <string name="orderSummary_thanks">Thanks!</string>
</resources>
